# openai-sdk-assignments

assignment_01/: README.md  main.py  pyproject.toml
assignment_01/data_schema/: math_output.py  politics_output.py
assignment_01/guardrail_function/: input_guardrail_function.py  output_guardrail_function.py
assignment_01/my_agent/: agent.py  politics_agent.py
assignment_01/my_config/: gemini_config.py
assignment_02/: .env  README.md  main.py
assignment_02/data_schema/: my_data_schema.py
assignment_02/guardrail_function/: input_guardrail_function.py
assignment_02/my_agent/: guardrail_agent.py  hotel_assistant.py
assignment_02/my_config/: gemini_config.py
assignment_04/: .env  README.md  main.py  pyproject.toml
assignment_04/my_agent/: search_agent.py
assignment_04/my_config/: tavily_config.py
assignment_04/my_tool/: search_tool.py
assignment_05/: .env  README.md  main.py  pyproject.toml
assignment_05/data_schema/: india_cities_output.py  usa_cities_output.py
assignment_05/guardrail_function/: input_guardrail_function.py  output_guardrail_function.py
assignment_05/my_agent/: agents.py
