[project]
name = "assignment-7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.7",
    "openai-agents>=0.2.11",
    "python-decouple>=3.8",
    "tavily-python>=0.7.12",
]
